<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tlproject.omada1.tl_project.Activities.ProfileActivity"
    android:background="@mipmap/backgroundprof">

    <TextView
        android:text="@string/curexp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/curexp"
...
        android:layout_above="@+id/curexp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/cast_expanded_controller_progress_text_color" />

    <TextView
        android:text="@string/nextlvlexp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/expbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/nextlvlexp"
...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:text="@string/current_quest"
        android:layout_below="@+id/btback"
        android:layout_centerHorizontal="true"
        android:textColor="@color/cast_expanded_controller_progress_text_color" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
...
        android:layout_above="@+id/textView14"
        android:layout_centerHorizontal="true"
        android:id="@+id/btedit"
        android:onClick="Edit" />

    <TextView
        android:text="@string/questdesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/questdesc"
        android:layout_below="@+id/textView14"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView13"
...

    <TextView
        android:text="@string/userprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:layout_above="@+id/usernameprofile"
        android:layout_alignStart="@+id/textView14"
        android:textColor="@color/cast_expanded_controller_progress_text_color" />

    <TextView
        android:text="@string/usernamet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameprofile"
        android:layout_above="@+id/lvl"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView7"
        android:textColor="@color/cast_expanded_controller_text_color" />

    <TextView
        android:text="@string/lvl"
...
