...
    <string name="registb">Regist</string>
    <string name="logo">Logo</string>
    <string name="actionbutton">action</string>
    <string name="profilebutton">Profile</string>
    <string name="logoutbutton">logout</string>
    <string name="regist">Regist:</string>
    <string name="usernamer">Username:</string>
    <string name="passwordr">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="register">Register</string>
    <string name="title_activity_regist">Register</string>
    <string name="usernamet">[username]</string>
    <string name="curexp">[curexp]</string>
    <string name="exp">Exp:</string>
...
